Alteracoes finais backend
