# back-end/swagger.json
@@ -2,15 +2,15 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.1",
-    "title": "ShareEnergy Project",
+    "title": "Sharenergy Project",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:5000",
   "basePath": "/",
   "tags": [
     {
-      "name": "Users",
-      "description": "Endpoint of Users"
+      "name": "Login",
+      "description": "Endpoint of Login"
     },
     {
       "name": "Clients",
@@ -59,11 +59,11 @@
           }
         }
       },
-      "put": {
+      "patch": {
         "tags": [
           "Clients"
         ],
-        "description": "Update all fields of a Client",
+        "description": "Update fields of a Client",
         "parameters": [
           {
             "name": "cid",
@@ -81,7 +81,7 @@
             "in": "body",
             "description": "Update a client.",
             "schema": {
-              "$ref": "#/definitions/putClient"
+              "$ref": "#/definitions/patchClient"
             }
           }
         ],
@@ -144,50 +144,10 @@
         }
       }
     },
-    "/api/users/": {
-      "get": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Find all users",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/getAllUsers"
-            }
-          }
-        }
-      }
-    },
-    "/api/users/signup": {
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Create a new user using name, email and password",
-        "parameters": [
-          {
-            "name": "User",
-            "in": "body",
-            "description": "Create a new user.",
-            "schema": {
-              "$ref": "#/definitions/signup"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        }
-      }
-    },
     "/api/users/login": {
       "post": {
         "tags": [
-          "Users"
+          "Login"
         ],
         "description": "Log in a user",
         "parameters": [
@@ -209,16 +169,12 @@
     }
   },
   "definitions": {
-    "Users": {
+    "Login": {
       "type": "object",
       "properties": {
-        "name": {
+        "username": {
           "type": "string",
-          "example": "John Doe"
-        },
-        "email": {
-          "type": "string",
-          "example": "test@gmail.com"
+          "example": "testjohn"
         },
         "password": {
           "type": "string",
@@ -226,69 +182,47 @@
         }
       }
     },
+    "loginUser": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string",
+          "example": "YOUR_USERNAME"
+        },
+        "password": {
+          "type": "string",
+          "example": "YOUR_PASSWORD"
+        }
+      },
+      "required": [
+        "username",
+        "password"
+      ]
+    },
     "Clients": {
       "type": "object",
       "properties": {
-        "age": {
-          "type": "number",
-          "example": 28
+        "name": {
+          "type": "string",
+          "example": "John Doe"
         },
         "email": {
           "type": "string",
           "example": "One of the most famous sky scrapers in the world!"
         },
-        "name": {
+        "phone": {
           "type": "string",
-          "example": "John Doe"
+          "example": "1122224444"
         },
-        "username": {
+        "address": {
           "type": "string",
           "example": "20 W 34th St, New York, NY 10001, Estados Unidos"
         },
-        "image": {
+        "cpf": {
           "type": "string",
-          "example": "http://www.image.com/someimage.jpg"
+          "example": "11122233344"
         }
       }
-    },
-    "loginUser": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string",
-          "example": "YOUR_EMAIL@something.com"
-        },
-        "password": {
-          "type": "string",
-          "example": "YOUR_PASSWORD"
-        }
-      },
-      "required": [
-        "email",
-        "password"
-      ]
-    },
-    "signup": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "example": "Jhon Doe"
-        },
-        "email": {
-          "type": "string",
-          "example": "YOUR_EMAIL@something.com"
-        },
-        "password": {
-          "type": "string",
-          "example": "YOUR_PASSWORD"
-        }
-      },
-      "required": [
-        "name",
-        "email",
-        "password"
-      ]
     },
     "getAllClients": {
       "type": "array",
@@ -296,74 +230,63 @@
         "$ref": "#/definitions/Clients"
       }
     },
-    "getAllUsers": {
-      "type": "array",
-      "items": {
-        "$ref": "#/definitions/Users"
-      }
-    },
     "createClient": {
       "type": "object",
       "properties": {
-        "age": {
-          "type": "number",
-          "example": 55
+        "name": {
+          "type": "string",
+          "example": "A complete name"
         },
         "email": {
           "type": "string",
           "example": "email@email.com"
         },
-        "name": {
+        "phone": {
           "type": "string",
-          "example": "A complete name"
+          "example": "1122224444"
         },
-        "username": {
+        "address": {
           "type": "string",
-          "example": "Creator name"
+          "example": "20 W 34th St, New York, NY 10001, Estados Unidos"
         },
-        "image": {
+        "cpf": {
           "type": "string",
-          "example": "http://www.image.com/someimage.jpg"
+          "example": "11122233344"
         }
       },
       "required": [
-        "age",
-        "email",
         "name",
-        "username",
-        "image"
+        "email",
+        "phone",
+        "address",
+        "cpf"
       ]
     },
-    "putClient": {
+    "patchClient": {
       "type": "object",
       "properties": {
-        "age": {
-          "type": "number",
-          "example": 55
+        "name": {
+          "type": "string",
+          "example": "A complete new name"
         },
         "email": {
           "type": "string",
-          "example": "email@email.com"
+          "example": "newemail@email.com"
         },
-        "name": {
+        "phone": {
           "type": "string",
-          "example": "A complete name"
+          "example": "3322224444"
         },
-        "username": {
+        "address": {
           "type": "string",
-          "example": "Creator name"
-        },
-        "image": {
-          "type": "string",
-          "example": "http://www.image.com/someimage.jpg"
+          "example": "34th St, New York, NY 10001, Estados Unidos"
         }
       },
       "required": [
-        "age",
-        "email",
         "name",
-        "username",
-        "image"
+        "email",
+        "phone",
+        "address"
       ]
     }
   }
